# sms_gateway_test_project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.nodejs  MONOREPO_MIGRATION.md  Makefile  README.md  README.old.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.sh  sms_gateway.db  sms_service.db
.agents/: issues.md  plan.md  work_list.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-claude.sh  test-claude.sh
.qwen/agents/: python-testing-expert.md
alembic/: script.py.mako
alembic/versions/: 2025_10_09_1351_d4529b4d8920_add_retry_fields_and_sms_retries_table.py
apps/gateway/: .dockerignore  Dockerfile  README.md  requirements-uv.txt
apps/gateway/alembic/: env.py
apps/providers/: .dockerignore  Dockerfile  sms_gateway_provider.ts  tsconfig.json
docs/: developer_guide.md
src/: __init__.py  config.py  database.py  distribution.py  health_tracker.py  main.py  models.py  monitor.py  providers.py  queue.py  rate_limiter.py  retry_service.py  taskiq_config.py  taskiq_scheduler.py  tasks.py  worker.py
tests/: __init__.py  conftest.py  test_config.py  test_dead_letter_queue.py  test_distribution_service.py  test_health_tracker.py  test_integration.py  test_integration_fixed.py  test_integration_full_workflow.py  test_middleware.py  test_queue.py  test_rate_limit_key_pattern.py  test_rate_limiter.py  test_rate_limiter_high_load.py  test_retry_provider_selection.py  test_retry_service.py  test_retry_service_scheduling.py  test_tasks.py
(+15 files in other folders)
